--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "My personal portfolio website built with React, showcasing my projects, skills, and contact information.",
+  "author": "Sandeep (MicroStarkDev)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MicroStarkDev/MicroStarkDev-PortFolio.git"
+  },
+  "homepage": "https://microstarkdev.github.io/MicroStarkDev-PortFolio",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,11 +23,16 @@
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
