--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
+  "name": "Sandeep | Portfolio",
+  "version": "1.0.1",
   "private": true,
   "description": "My personal portfolio website built with React, showcasing my projects, skills, and contact information.",
-  "author": "Sandeep (MicroStarkDev)",
-  "license": "MIT",
+  "author": "Sandeep Kumar Samal (MicroStarkDev)",
   "repository": {
     "type": "git",
     "url": "https://github.com/MicroStarkDev/MicroStarkDev-PortFolio.git"
   },
   "homepage": "https://microstarkdev.github.io/MicroStarkDev-PortFolio",
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emailjs/browser": "^4.5.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.3.0",
+    "react-dom": "^19.3.0",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^11.0.5",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^11.1.0",
+    "web-vitals": "^3.1.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
