--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sandeep | Portfolio",
+  "name": "sandeep-portfolio",
   "version": "1.0.1",
   "private": true,
   "description": "My personal portfolio website built with React, showcasing my projects, skills, and contact information.",
@@ -10,20 +10,20 @@
   },
   "homepage": "https://microstarkdev.github.io/MicroStarkDev-PortFolio",
   "dependencies": {
-    "@emailjs/browser": "^4.5.0",
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.4.3",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^11.1.0",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.4.0"
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
