--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "homepage": "https://microstarkdev.github.io/MicroStarkDev-PortFolio",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
